updated text container, Fixed a photo alignment issue

--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -43,6 +43,7 @@
         width: 275px;
         height: 275px;
         margin: 0 auto 2rem;
+        justify-content: center;
     }
     .about-containers,
     .interest-section-container {
